# fastapi-serverless

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements-prod.txt  serverless.yaml
app/: main.py
app/core/: config.py
