[project]
name = "fastapi-serverless"
version = "0.1.0"
description = ""
authors = [
    {name = "Carol",email = "awdrg1210@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1,<0.117.0",
    "mangum>=0.19.0,<0.20.0",
    "pydantic-settings>=2.10.1,<3.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
